--- a/bs_export/index.html
+++ b/bs_export/index.html
@@ -65,15 +65,18 @@
             summary_container.innerHTML = generate_triangle_summary(line_data, initial_size, density, dry_density);
         }
 
-        function generate_square_table() {
+        function render_square_table() {
             const container = document.querySelector('.calc_glaze')
             const initial_size = parseInt(document.getElementById('lineSize').value);
             const initial_volume = parseInt(document.getElementById('testerVolume').value);
-
-            container.innerHTML = 'not implemented';
+            const line_data = generate_square_data(initial_size, initial_volume);
+            container.innerHTML = '';
+            generate_rect_table(initial_size, initial_size, line_data, container);
 
             const summary_container = document.querySelector('.summary_container');
-            summary_container.innerHTML = 'not implemented';
+            const density = parseFloat(document.getElementById('density').value);
+            const dry_density = parseFloat(document.getElementById('dryDensity').value);
+            summary_container.innerHTML = generate_square_summary(line_data, initial_size, density, dry_density);
         }
         
         function set_stretch_type(type) {
@@ -126,7 +129,7 @@
                 render_triangle_table();
                 console.log("triangle table generated");
             } else if (current_stretch_type === "square") {
-                generate_square_table();
+                render_square_table();
                 console.log("square table generated");
             }
             // Save filter values to localStorage
