feat: enhance SEO

--- a/index.html
+++ b/index.html
@@ -4,7 +4,20 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Калькулятор растяжек</title>
+    <meta name="description" content="Калькулятор для создания линейных, треугольных и квадратных растяжек глазурей. Инструмент для керамистов расчитывает объемы смешивания для тестирования глазурей, включая линейные растяжки, триаксиальные (треугольные) и двухосные (квадратные) смешивания.">
+    <meta name="description" lang="en" content="Glaze blending calculator for creating linear, triaxial (triangle), and biaxial (square) glaze tests. A ceramic tool to calculate volumetric mixing for glaze testing, supporting line blends, triaxial blends, and square matrix blends.">
+    <meta name="keywords" content="калькулятор глазури, растяжка глазури, смешивание глазурей, объемное смешивание, линейные растяжки, триаксиальные растяжки, керамика, глазурь для керамики, тестирование глазури, glaze calculator, glaze blending, volumetric blending, line blend, triaxial blend, biaxial blend, ceramic glaze, pottery glaze, glaze testing">
+    <meta name="author" content="vvzvlad">
+    <meta name="robots" content="index, follow">
+    <meta property="og:title" content="Калькулятор растяжек глазури | Линейные, треугольные и квадратные тесты">
+    <meta property="og:description" content="Инструмент для расчета линейных, треугольных и квадратных растяжек глазурей для керамистов">
+    <meta property="og:image" content="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🎨</text></svg>">
+    <meta property="og:type" content="website">
+    <meta name="language" content="ru">
+    <meta http-equiv="content-language" content="ru">
+    <meta name="alternate" content="Glaze Blending Calculator" hreflang="en">
+    <link rel="canonical" href="https://vvzvlad.github.io/glazy_mixer/">
+    <title>Калькулятор растяжек глазури | Линейные, треугольные и квадратные тесты</title>
     <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🎨</text></svg>">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i,600,600i&amp;display=swap">
@@ -21,13 +34,7 @@
     for (var j = 0; j < document.scripts.length; j++) {if (document.scripts[j].src === r) { return; }}
     k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
     (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
-
-    ym(101687597, "init", {
-          clickmap:true,
-          trackLinks:true,
-          accurateTrackBounce:true,
-          webvisor:true
-    });
+    ym(101687597, "init", { clickmap:true, trackLinks:true, accurateTrackBounce:true, webvisor:true });
     </script>
     <noscript><div><img src="https://mc.yandex.ru/watch/101687597" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
     <!-- /Yandex.Metrika counter -->
@@ -275,6 +282,29 @@
     <script src="assets/js/baguetteBox.min.js"></script>
     <script src="assets/js/vanilla-zoom.js"></script>
     <script src="assets/js/theme.js"></script>
+    
+    <!-- Schema.org markup for SEO -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebApplication",
+      "name": "Калькулятор растяжек глазури",
+      "alternateName": "Glaze Blending Calculator",
+      "description": "Инструмент для расчета объемов при смешивании глазурей для линейных, триаксиальных (треугольных) и двухосных (квадратных) тестов",
+      "applicationCategory": "CalculatorApplication",
+      "operatingSystem": "Any",
+      "offers": {
+        "@type": "Offer",
+        "price": "0",
+        "priceCurrency": "USD"
+      },
+      "author": {
+        "@type": "Person",
+        "name": "vvzvlad"
+      },
+      "keywords": "глазурь, керамика, растяжка глазури, объемное смешивание, линейные растяжки, триаксиальные растяжки, glaze, pottery, glaze blending, volumetric blending, line blend, triaxial blend"
+    }
+    </script>
 </body>
 
 </html>
